cif/org.eclipse.escet.cif.tests/tests/controllercheck/bounded_response/bounded_channel_non_deterministic.BCF.err
WARNING: The alphabet of the specification contains no controllable events.
WARNING: The alphabet of the specification contains no uncontrollable events.
ERROR: CIF controller properties checker failed due to unsatisfied preconditions:

  -------------------------
  (1/1) Event is a channel.
  -------------------------
   * In the top-level scope of the specification:
     - uncontrollable bool u_chan;
                           ^
     - controllable bool c_chan;
                         ^
